WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128048
SVGTextLayoutAttributesBuilder shouldn't use RenderText::deprecatedCharacters()
https://bugs.webkit.org/show_bug.cgi?id=128048
Summary
SVGTextLayoutAttributesBuilder shouldn't use RenderText::deprecatedCharacters()
Anders Carlsson
Reported
2014-02-01 12:24:56 PST
SVGTextLayoutAttributesBuilder shouldn't use RenderText::deprecatedCharacters()
Attachments
Patch
(5.71 KB, patch)
2014-02-01 12:28 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2014-02-01 12:28:12 PST
Created
attachment 222887
[details]
Patch
Anders Carlsson
Comment 2
2014-02-01 12:32:30 PST
Committed
r163248
: <
http://trac.webkit.org/changeset/163248
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug