Source/WebCore/rendering/svg/SVGTextLayoutAttributesBuilder.cpp
@@ -43,8 +43,8 @@ void SVGTextLayoutAttributesBuilder::buildLayoutAttributesForTextRenderer(Render
         m_characterDataMap.clear();
 
         m_textLength = 0;
-        const UChar* lastCharacter = 0;
-        collectTextPositioningElements(textRoot, lastCharacter);
+        bool lastCharacterWasSpace = true;
+        collectTextPositioningElements(textRoot, lastCharacterWasSpace);
 
         if (!m_textLength)
             return;
@@ -63,8 +63,8 @@ bool SVGTextLayoutAttributesBuilder::buildLayoutAttributesForForSubtree(RenderSV
 
     if (m_textPositions.isEmpty()) {
         m_textLength = 0;
-        const UChar* lastCharacter = 0;
-        collectTextPositioningElements(textRoot, lastCharacter);
+        bool lastCharacterWasSpace = true;
+        collectTextPositioningElements(textRoot, lastCharacterWasSpace);
     }
 
     if (!m_textLength)
@@ -81,32 +81,30 @@ void SVGTextLayoutAttributesBuilder::rebuildMetricsForTextRenderer(RenderSVGInli
     m_metricsBuilder.measureTextRenderer(text);
 }
 
-static inline void processRenderSVGInlineText(RenderSVGInlineText* text, unsigned& atCharacter, const UChar*& lastCharacter)
+static inline void processRenderSVGInlineText(const RenderSVGInlineText& text, unsigned& atCharacter, bool& lastCharacterWasSpace)
 {
-    if (text->style().whiteSpace() == PRE) {
-        atCharacter += text->textLength();
+    if (text.style().whiteSpace() == PRE) {
+        atCharacter += text.textLength();
         return;
     }
 
-    const UChar* characters = text->deprecatedCharacters();
-    unsigned textLength = text->textLength();    
-    for (unsigned textPosition = 0; textPosition < textLength; ++textPosition) {
-        const UChar* currentCharacter = characters + textPosition;
-        if (*currentCharacter == ' ' && (!lastCharacter || *lastCharacter == ' '))
+    for (unsigned textPosition = 0, textLength = text.textLength(); textPosition < textLength; ++textPosition) {
+        const UChar currentCharacter = text[textPosition];
+        if (currentCharacter == ' ' && lastCharacterWasSpace)
             continue;
 
-        lastCharacter = currentCharacter;
+        lastCharacterWasSpace = currentCharacter == ' ';
         ++atCharacter;
     }
 }
 
-void SVGTextLayoutAttributesBuilder::collectTextPositioningElements(RenderObject* start, const UChar*& lastCharacter)
+void SVGTextLayoutAttributesBuilder::collectTextPositioningElements(RenderObject* start, bool& lastCharacterWasSpace)
 {
     ASSERT(!start->isSVGText() || m_textPositions.isEmpty());
 
     for (RenderObject* child = start->firstChildSlow(); child; child = child->nextSibling()) {
         if (child->isSVGInlineText()) {
-            processRenderSVGInlineText(toRenderSVGInlineText(child), m_textLength, lastCharacter);
+            processRenderSVGInlineText(*toRenderSVGInlineText(child), m_textLength, lastCharacterWasSpace);
             continue;
         }
 
@@ -118,7 +116,7 @@ void SVGTextLayoutAttributesBuilder::collectTextPositioningElements(RenderObject
         if (element)
             m_textPositions.append(TextPosition(element, m_textLength));
 
-        collectTextPositioningElements(child, lastCharacter);
+        collectTextPositioningElements(child, lastCharacterWasSpace);
 
         if (!element)
             continue;
